--- a/Triple-Ten/Sprint__1/se_project_library/styles/style.css
+++ b/Triple-Ten/Sprint__1/se_project_library/styles/style.css
@@ -18,6 +18,7 @@
 
 nav{
   display: flex;
+  padding-bottom: 128px;
 
 }
 .header__title {
@@ -53,35 +54,33 @@ nav{
 }
 
 .header__address {
+  /* display: flex; */
   margin: 0;
   color: #838383;
+  /* justify-content: flex-start; */
 }
 
-.nav {
-  /* Add flex properties here */
+nav {
+  display: flex;
+  justify-content: flex-end;
+  margin-top: -80px;
 }
 
 .nav__logo {
+  display: flex;
 }
 
 .nav__links {
   display: flex;
   list-style: none;
   margin: 8px 0 0;
-  padding-left: 170px;
 }
 
 .nav__link {
   display: flex;
-  justify-content: flex-end;
   color: #000000;
   text-decoration: none;
   font-weight: 8px;
-  padding-right: 30px;
-  justify-self: flex-end;
-
+  padding-right: 25px;
 }
 
-ul{
-  padding: 0;
-}
