--- a/Triple-Ten/Sprint__1/se_project_library/styles/style.css
+++ b/Triple-Ten/Sprint__1/se_project_library/styles/style.css
@@ -16,10 +16,6 @@
   box-sizing: border-box;
 }
 
-nav{
-  display: flex;
-
-}
 .header__title {
   max-width: 601px;
   font-size: 66px;  
@@ -35,9 +31,9 @@ nav{
   flex-wrap: wrap;
 }
 
-.header__image {
+/* .header__image {
   z-index: 1;
-}
+} */
 
 .header__footer {
   margin-top: auto;
@@ -58,27 +54,22 @@ nav{
   color: #838383;
 }
 
-
-.nav__links, nav{
+ul, .nav__links {
   display: flex;
-  justify-content: flex-end;
+  list-style: none;
+  margin: 8px 0 0;
+  justify-content: flex-end;  
+  padding-bottom: 90px;
+  
 }
 
-nav{
-  display: flex;
-}
-
-.nav__link{
-  display: flex;
-  justify-content: flex-end;
-
-}
 
 .nav__links {
   display: flex;
   list-style: none;
   margin: 8px 0 0;
-  
+  justify-content: flex-end;  
+  padding-bottom: 75px;
 }
 
 .nav__link {
@@ -90,17 +81,4 @@ nav{
   padding-right: 30px;
   justify-content: flex-end;
 
-
-}
-
-ul{
-  padding: 0;
-}
-
-h1{
-  margin: 0;
-}
-
-p{
-  margin: 0;
 }
